--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ scala:
 services:
   - docker
 
+before_script:
+  - wget -q https://dl.bintray.com/sbt/debian/sbt-0.13.15.deb
+  - sudo dpkg -i sbt-0.13.15.deb
+
 script:
   - sbt clean coverage test
 
