udp client, code refactoring

--- a/src/test/resources/influxdb.conf
+++ b/src/test/resources/influxdb.conf
@@ -401,7 +401,7 @@
 ###
 
 [[udp]]
-  # enabled = false
+  enabled = true
   # bind-address = ":8089"
   # database = "udp"
   # retention-policy = ""
