adding release step, json supp test fixes

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,5 @@ script:
 after_success:
   - sbt coverageReport coveralls
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
-    sbt release
+    sbt release release-version $RELEASE_VERSION next-version $NEXT_RELEASE_VERSION
     fi
