--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,3 +1,4 @@
+## Configure style
 docstrings = ScalaDoc
 
 maxColumn = 100
@@ -7,14 +8,4 @@ assumeStandardLibraryStripMargin = true
 newlines {
   alwaysBeforeTopLevelStatements = true
   sometimesBeforeColonInMethodReturnType = false
-}
-
-runner.optimizer.forceConfigStyleOnOffset = 150
-
-rewrite {
-  redundantBraces {
-    maxLines = 100
-    includeUnitMethods = true
-    stringInterpolation = true
-  }
 }
