--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,11 +1,19 @@
-## Configure style
+## Style configuration
 docstrings = ScalaDoc
 
-maxColumn = 100
+maxColumn = 200
+
+align.tokens = [{code = "=>", owner = "Case"}]
+align.tokens = ["%", "%%"]
 
 assumeStandardLibraryStripMargin = true
 
-newlines {
-  alwaysBeforeTopLevelStatements = true
-  sometimesBeforeColonInMethodReturnType = false
+newlines.alwaysBeforeTopLevelStatements = true
+
+rewrite {
+  redundantBraces {
+    maxLines = 100
+    includeUnitMethods = true
+    stringInterpolation = true
+  }
 }
