--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,22 @@
 version: 2
 jobs:
+  build:
+       docker:
+         - image: circleci/openjdk:8-jdk
+       steps:
+         - checkout
+         - run:
+             name: Insatll sbt
+             command: |
+                echo "deb https://dl.bintray.com/sbt/debian /" | sudo tee -a /etc/apt/sources.list.d/sbt.list
+                sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 2EE0EA64E40A89B84B2DF73499E82A75642AC823
+                sudo apt-get update
+                sudo apt-get install sbt
   test:
       docker:
         - image: circleci/openjdk:8-jdk
         - image: influxdb:1.3.9
       steps:
-        - run:
-            name: Insatll sbt
-            command: |
-              echo "deb https://dl.bintray.com/sbt/debian /" | sudo tee -a /etc/apt/sources.list.d/sbt.list
-              sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 2EE0EA64E40A89B84B2DF73499E82A75642AC823
-              sudo apt-get update
-              sudo apt-get install sbt
         - checkout
         - run:
             name: Compile sources
@@ -32,9 +37,7 @@ jobs:
     version: 2
     test:
       jobs:
-        - test #:
-#            requires:
-#              - build
-#            filters:
-#              branches:
-#                only: master
+        - build
+        - test:
+            requires:
+              - build
