--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,11 @@ jobs:
        steps:
          - checkout
          - run:
+             name: Install scala
+             command: |
+                sudo wget www.scala-lang.org/files/archive/scala-2.12.4.deb
+                sudo dpkg -i scala-2.12.4.deb
+         - run:
              name: Insatll sbt
              command: |
                 wget -q https://dl.bintray.com/sbt/debian/sbt-1.1.0.deb
@@ -14,8 +19,13 @@ jobs:
       docker:
         - image: circleci/openjdk:8-jdk
         - image: influxdb:1.3.9
+          environment:
+            INFLUXDB_CONFIG_PATH: /conf/influxdb.conf
       steps:
         - checkout
+        - run:
+            name: Create Admin user for InfluxDB
+            command: curl -i -XPOST 'http://localhost:8086/query?q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES'
         - run:
             name: Compile sources
             command: sbt compile
