--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
         - image: circleci/openjdk:8-jdk
         - image: influxdb:1.3.9
           environment:
-            INFLUXDB_CONFIG_PATH: "~/chronicler/conf/influxdb.conf"
+            INFLUXDB_CONFIG_PATH: /root/chronicler/conf/influxdb.conf
       steps:
         - checkout
         - run:
