--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,12 +16,11 @@ jobs:
                 wget -q https://dl.bintray.com/sbt/debian/sbt-1.1.0.deb
                 sudo dpkg -i sbt-1.1.0.deb
   test:
-      working_directory: ~/chronicler
       docker:
         - image: circleci/openjdk:8-jdk
         - image: influxdb:1.3.9
           environment:
-            INFLUXDB_CONFIG_PATH: conf/influxdb.conf
+            INFLUXDB_CONFIG_PATH: /home/circleci/chronicler/conf/influxdb.conf
       steps:
         - checkout
         - run:
