--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,8 @@ jobs:
         - image: circleci/openjdk:8-jdk
         - image: influxdb:1.3.9
           environment:
-            INFLUXDB_CONFIG_PATH: /home/circleci/chronicler/conf/influxdb.conf
+            INFLUXDB_HTTP_AUTH_ENABLED: true
+#            INFLUXDB_CONFIG_PATH: /home/circleci/chronicler/conf/influxdb.conf
       steps:
         - checkout
         - run:
