--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,12 +21,12 @@ jobs:
         - image: influxdb:1.3.9
           environment:
             INFLUXDB_HTTP_AUTH_ENABLED: true
-#            INFLUXDB_CONFIG_PATH: /home/circleci/chronicler/conf/influxdb.conf
       steps:
         - checkout
         - run:
-            name: Create Admin user for InfluxDB
-            command: curl -i -XPOST 'http://localhost:8086/query?q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES'
+            name: Create admin user for InfluxDB
+            command: "curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
+
         - run:
             name: Compile sources
             command: sbt compile
