--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,21 +6,17 @@ jobs:
        steps:
          - checkout
          - run:
-             name: Install scala
-             command: |
-                sudo wget www.scala-lang.org/files/archive/scala-2.12.4.deb
-                sudo dpkg -i scala-2.12.4.deb
-         - run:
              name: Insatll sbt
              command: |
                 wget -q https://dl.bintray.com/sbt/debian/sbt-1.1.0.deb
                 sudo dpkg -i sbt-1.1.0.deb
-  test:
+  test_akka_2.12.4:
       docker:
         - image: circleci/openjdk:8-jdk
         - image: influxdb:1.3.9
           environment:
             INFLUXDB_HTTP_AUTH_ENABLED: true
+            SCALA_VERSION: 2.12.4
       steps:
         - checkout
         - run:
@@ -28,24 +24,114 @@ jobs:
             command: "curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
         - run:
             name: Compile sources
-            command: sbt compile
+            command: sbt ++$SCALA_VERSION "project akkaHttp" compile
         - run:
             name: Compile test sources
-            command: sbt test:compile
+            command: sbt ++$SCALA_VERSION "project akkaHttp" test:compile
         - run:
             name: Run coverage
-            command: sbt coverage
+            command: sbt ++$SCALA_VERSION "project akkaHttp" coverage
         - run:
             name: Run tests
-            command: sbt test
+            command: sbt ++$SCALA_VERSION "project akkaHttp" test
         - run:
             name: Run coveralls
-            command: sbt coverageReport coveralls
+            command: sbt ++$SCALA_VERSION "project akkaHttp" coverageReport coveralls
+  test_akka_2.11.11:
+        docker:
+          - image: circleci/openjdk:8-jdk
+          - image: influxdb:1.3.9
+            environment:
+              INFLUXDB_HTTP_AUTH_ENABLED: true
+              SCALA_VERSION: 2.12.4
+        steps:
+          - checkout
+          - run:
+              name: Create admin user for InfluxDB
+              command: "curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
+          - run:
+              name: Compile sources
+              command: sbt ++$SCALA_VERSION "project akkaHttp" compile
+          - run:
+              name: Compile test sources
+              command: sbt ++$SCALA_VERSION "project akkaHttp" test:compile
+          - run:
+              name: Run coverage
+              command: sbt ++$SCALA_VERSION "project akkaHttp" coverage
+          - run:
+              name: Run tests
+              command: sbt ++$SCALA_VERSION "project akkaHttp" test
+          - run:
+              name: Run coveralls
+              command: sbt ++$SCALA_VERSION "project akkaHttp" coverageReport coveralls
+  test_async_2.12.4:
+      docker:
+        - image: circleci/openjdk:8-jdk
+        - image: influxdb:1.3.9
+          environment:
+            INFLUXDB_HTTP_AUTH_ENABLED: true
+            SCALA_VERSION: 2.12.4
+      steps:
+        - checkout
+        - run:
+            name: Create admin user for InfluxDB
+            command: "curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
+        - run:
+            name: Compile sources
+            command: sbt ++$SCALA_VERSION "project asyncHttp" compile
+        - run:
+            name: Compile test sources
+            command: sbt ++$SCALA_VERSION "project asyncHttp" test:compile
+        - run:
+            name: Run coverage
+            command: sbt ++$SCALA_VERSION "project asyncHttp" coverage
+        - run:
+            name: Run tests
+            command: sbt ++$SCALA_VERSION "project asyncHttp" test
+        - run:
+            name: Run coveralls
+            command: sbt ++$SCALA_VERSION "project asyncHttp" coverageReport coveralls
+  test_async_2.11.11:
+      docker:
+        - image: circleci/openjdk:8-jdk
+        - image: influxdb:1.3.9
+          environment:
+            INFLUXDB_HTTP_AUTH_ENABLED: true
+            SCALA_VERSION: 2.11.11
+      steps:
+        - checkout
+        - run:
+            name: Create admin user for InfluxDB
+            command: "curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
+        - run:
+            name: Compile sources
+            command: sbt ++$SCALA_VERSION "project asyncHttp" compile
+        - run:
+            name: Compile test sources
+            command: sbt ++$SCALA_VERSION "project asyncHttp" test:compile
+        - run:
+            name: Run coverage
+            command: sbt ++$SCALA_VERSION "project asyncHttp" coverage
+        - run:
+            name: Run tests
+            command: sbt ++$SCALA_VERSION "project asyncHttp" test
+        - run:
+            name: Run coveralls
+            command: sbt ++$SCALA_VERSION "project asyncHttp" coverageReport coveralls
 workflows:
   version: 2
   test:
     jobs:
       - build
-      - test:
+      - test_akka_2.12.4:
+          requires:
+            - build
+      - test_akka_2.11.11:
+          requires:
+            - build
+      - test_async_2.12.4:
+          requires:
+            - build
+      - test_async_2.11.11:
           requires:
             - build
