--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
         - checkout
         - run:
             name: Create admin user for InfluxDB
-            command: 'curl -G http://localhost:8086/query --data-urlencode \'q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\''
+            command: "curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
         - run:
             name: Compile sources
             command: sbt ++$SCALA_VERSION 'project akkaHttp' compile
@@ -48,7 +48,7 @@ jobs:
           - checkout
           - run:
               name: Create admin user for InfluxDB
-              command: 'curl -G http://localhost:8086/query --data-urlencode \'q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\''
+              command: '"curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
           - run:
               name: Compile sources
               command: sbt ++$SCALA_VERSION 'project akkaHttp' compile
@@ -75,7 +75,7 @@ jobs:
         - checkout
         - run:
             name: Create admin user for InfluxDB
-            command: 'curl -G http://localhost:8086/query --data-urlencode \'q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\''
+            command: "curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
         - run:
             name: Compile sources
             command: sbt ++$SCALA_VERSION 'project asyncHttp' compile
@@ -102,7 +102,7 @@ jobs:
         - checkout
         - run:
             name: Create admin user for InfluxDB
-            command: 'curl -G http://localhost:8086/query --data-urlencode \'q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\''
+            command: "curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
         - run:
             name: Compile sources
             command: sbt ++$SCALA_VERSION 'project asyncHttp' compile
