--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,13 +3,15 @@ jobs:
   build:
        docker:
          - image: circleci/openjdk:8-jdk
+           environment:
+             SBT_VERSION: 1.1.0
        steps:
          - checkout
          - run:
              name: Insatll sbt
              command: |
-                wget -q https://dl.bintray.com/sbt/debian/sbt-1.1.0.deb
-                sudo dpkg -i sbt-1.1.0.deb
+                wget -q https://dl.bintray.com/sbt/debian/sbt-$SBT_VERSION.deb
+                sudo dpkg -i sbt-$SBT_VERSION.deb
   test_akka_2.12.4:
       docker:
         - image: circleci/openjdk:8-jdk
@@ -23,115 +25,121 @@ jobs:
             name: Create admin user for InfluxDB
             command: "curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
         - run:
-            name: Compile sources
-            command: sbt ++$SCALA_VERSION 'project akkaHttp' compile
+            name: Start sbt in batch mode
+            command: sbt ++$SCALA_VERSION
         - run:
-            name: Compile test sources
-            command: sbt ++$SCALA_VERSION 'project akkaHttp' test:compile
-        - run:
-            name: Run coverage
-            command: sbt ++$SCALA_VERSION 'project akkaHttp' coverage
-        - run:
-            name: Run tests
-            command: sbt ++$SCALA_VERSION 'project akkaHttp' test
-        - run:
-            name: Run coveralls
-            command: sbt ++$SCALA_VERSION 'project akkaHttp' coverageReport coveralls
-  test_akka_2.11.11:
-        docker:
-          - image: circleci/openjdk:8-jdk
-          - image: influxdb:1.3.9
-            environment:
-              INFLUXDB_HTTP_AUTH_ENABLED: true
-              SCALA_VERSION: 2.12.4
-        steps:
-          - checkout
-          - run:
-              name: Create admin user for InfluxDB
-              command: '"curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
-          - run:
-              name: Compile sources
-              command: sbt ++$SCALA_VERSION 'project akkaHttp' compile
-          - run:
-              name: Compile test sources
-              command: sbt ++$SCALA_VERSION 'project akkaHttp' test:compile
-          - run:
-              name: Run coverage
-              command: sbt ++$SCALA_VERSION 'project akkaHttp' coverage
-          - run:
-              name: Run tests
-              command: sbt ++$SCALA_VERSION 'project akkaHttp' test
-          - run:
-              name: Run coveralls
-              command: sbt ++$SCALA_VERSION 'project akkaHttp' coverageReport coveralls
-  test_async_2.12.4:
-      docker:
-        - image: circleci/openjdk:8-jdk
-        - image: influxdb:1.3.9
-          environment:
-            INFLUXDB_HTTP_AUTH_ENABLED: true
-            SCALA_VERSION: 2.12.4
-      steps:
-        - checkout
-        - run:
-            name: Create admin user for InfluxDB
-            command: "curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
+            name: Setting up project
+            command: project akkaHttp
         - run:
             name: Compile sources
-            command: sbt ++$SCALA_VERSION 'project asyncHttp' compile
+            command: compile
         - run:
             name: Compile test sources
-            command: sbt ++$SCALA_VERSION 'project asyncHttp' test:compile
+            command: test:compile
         - run:
             name: Run coverage
-            command: sbt ++$SCALA_VERSION 'project asyncHttp' coverage
+            command: coverage
         - run:
             name: Run tests
-            command: sbt ++$SCALA_VERSION 'project asyncHttp' test
+            command: test
         - run:
             name: Run coveralls
-            command: sbt ++$SCALA_VERSION 'project asyncHttp' coverageReport coveralls
-  test_async_2.11.11:
-      docker:
-        - image: circleci/openjdk:8-jdk
-        - image: influxdb:1.3.9
-          environment:
-            INFLUXDB_HTTP_AUTH_ENABLED: true
-            SCALA_VERSION: 2.11.11
-      steps:
-        - checkout
-        - run:
-            name: Create admin user for InfluxDB
-            command: "curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
-        - run:
-            name: Compile sources
-            command: sbt ++$SCALA_VERSION 'project asyncHttp' compile
-        - run:
-            name: Compile test sources
-            command: sbt ++$SCALA_VERSION 'project asyncHttp' test:compile
-        - run:
-            name: Run coverage
-            command: sbt ++$SCALA_VERSION 'project asyncHttp' coverage
-        - run:
-            name: Run tests
-            command: sbt ++$SCALA_VERSION 'project asyncHttp' test
-        - run:
-            name: Run coveralls
-            command: sbt ++$SCALA_VERSION 'project asyncHttp' coverageReport coveralls
+            command: coverageReport coveralls
+#  test_akka_2.11.11:
+#        docker:
+#          - image: circleci/openjdk:8-jdk
+#          - image: influxdb:1.3.9
+#            environment:
+#              INFLUXDB_HTTP_AUTH_ENABLED: true
+#              SCALA_VERSION: 2.12.4
+#        steps:
+#          - checkout
+#          - run:
+#              name: Create admin user for InfluxDB
+#              command: '"curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
+#          - run:
+#              name: Compile sources
+#              command: sbt ++$SCALA_VERSION 'project akkaHttp' compile
+#          - run:
+#              name: Compile test sources
+#              command: sbt ++$SCALA_VERSION 'project akkaHttp' test:compile
+#          - run:
+#              name: Run coverage
+#              command: sbt ++$SCALA_VERSION 'project akkaHttp' coverage
+#          - run:
+#              name: Run tests
+#              command: sbt ++$SCALA_VERSION 'project akkaHttp' test
+#          - run:
+#              name: Run coveralls
+#              command: sbt ++$SCALA_VERSION 'project akkaHttp' coverageReport coveralls
+#  test_async_2.12.4:
+#      docker:
+#        - image: circleci/openjdk:8-jdk
+#        - image: influxdb:1.3.9
+#          environment:
+#            INFLUXDB_HTTP_AUTH_ENABLED: true
+#            SCALA_VERSION: 2.12.4
+#      steps:
+#        - checkout
+#        - run:
+#            name: Create admin user for InfluxDB
+#            command: "curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
+#        - run:
+#            name: Compile sources
+#            command: sbt ++$SCALA_VERSION 'project asyncHttp' compile
+#        - run:
+#            name: Compile test sources
+#            command: sbt ++$SCALA_VERSION 'project asyncHttp' test:compile
+#        - run:
+#            name: Run coverage
+#            command: sbt ++$SCALA_VERSION 'project asyncHttp' coverage
+#        - run:
+#            name: Run tests
+#            command: sbt ++$SCALA_VERSION 'project asyncHttp' test
+#        - run:
+#            name: Run coveralls
+#            command: sbt ++$SCALA_VERSION 'project asyncHttp' coverageReport coveralls
+#  test_async_2.11.11:
+#      docker:
+#        - image: circleci/openjdk:8-jdk
+#        - image: influxdb:1.3.9
+#          environment:
+#            INFLUXDB_HTTP_AUTH_ENABLED: true
+#            SCALA_VERSION: 2.11.11
+#      steps:
+#        - checkout
+#        - run:
+#            name: Create admin user for InfluxDB
+#            command: "curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
+#        - run:
+#            name: Compile sources
+#            command: sbt ++$SCALA_VERSION 'project asyncHttp' compile
+#        - run:
+#            name: Compile test sources
+#            command: sbt ++$SCALA_VERSION 'project asyncHttp' test:compile
+#        - run:
+#            name: Run coverage
+#            command: sbt ++$SCALA_VERSION 'project asyncHttp' coverage
+#        - run:
+#            name: Run tests
+#            command: sbt ++$SCALA_VERSION 'project asyncHttp' test
+#        - run:
+#            name: Run coveralls
+#            command: sbt ++$SCALA_VERSION 'project asyncHttp' coverageReport coveralls
 workflows:
   version: 2
-  test:
+  build_and_test:
     jobs:
       - build
       - test_akka_2.12.4:
           requires:
             - build
-      - test_akka_2.11.11:
-          requires:
-            - build
-      - test_async_2.12.4:
-          requires:
-            - build
-      - test_async_2.11.11:
-          requires:
-            - build
+#      - test_akka_2.11.11:
+#          requires:
+#            - build
+#      - test_async_2.12.4:
+#          requires:
+#            - build
+#      - test_async_2.11.11:
+#          requires:
+#            - build
