--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,41 +10,40 @@ jobs:
          - run:
              name: Insatll sbt
              command: |
-                wget -q https://dl.bintray.com/sbt/debian/sbt-$SBT_VERSION.deb
-                sudo dpkg -i sbt-$SBT_VERSION.deb
+                wget -q https://dl.bintray.com/sbt/debian/sbt-1.1.0.deb
+                sudo dpkg -i sbt-1.1.0.deb
   test_akka_2.12.4:
       docker:
         - image: circleci/openjdk:8-jdk
         - image: influxdb:1.3.9
           environment:
             INFLUXDB_HTTP_AUTH_ENABLED: true
-            SCALA_VERSION: 2.12.4
       steps:
         - checkout
         - run:
             name: Create admin user for InfluxDB
             command: "curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
         - run:
-            name: Start sbt in batch mode
-            command: sbt ++$SCALA_VERSION
-        - run:
-            name: Setting up project
-            command: project akkaHttp
-        - run:
-            name: Compile sources
-            command: compile
-        - run:
-            name: Compile test sources
-            command: test:compile
-        - run:
-            name: Run coverage
-            command: coverage
-        - run:
-            name: Run tests
-            command: test
-        - run:
-            name: Run coveralls
-            command: coverageReport coveralls
+            name: Test
+            command: "sbt ++2.12.4 \"project akkaHttp\" compile test:compile test"
+#        - run:
+#            name: Setting up project
+#            command: project akkaHttp
+#        - run:
+#            name: Compile sources
+#            command: compile
+#        - run:
+#            name: Compile test sources
+#            command: test:compile
+#        - run:
+#            name: Run coverage
+#            command: coverage
+#        - run:
+#            name: Run tests
+#            command: test
+#        - run:
+#            name: Run coveralls
+#            command: coverageReport coveralls
 #  test_akka_2.11.11:
 #        docker:
 #          - image: circleci/openjdk:8-jdk
