--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,105 +26,48 @@ jobs:
         - run:
             name: Test
             command: "sbt ++2.12.4 \"project akkaHttp\" compile test:compile test"
-#        - run:
-#            name: Setting up project
-#            command: project akkaHttp
-#        - run:
-#            name: Compile sources
-#            command: compile
-#        - run:
-#            name: Compile test sources
-#            command: test:compile
-#        - run:
-#            name: Run coverage
-#            command: coverage
-#        - run:
-#            name: Run tests
-#            command: test
-#        - run:
-#            name: Run coveralls
-#            command: coverageReport coveralls
-#  test_akka_2.11.11:
-#        docker:
-#          - image: circleci/openjdk:8-jdk
-#          - image: influxdb:1.3.9
-#            environment:
-#              INFLUXDB_HTTP_AUTH_ENABLED: true
-#              SCALA_VERSION: 2.12.4
-#        steps:
-#          - checkout
-#          - run:
-#              name: Create admin user for InfluxDB
-#              command: '"curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
-#          - run:
-#              name: Compile sources
-#              command: sbt ++$SCALA_VERSION 'project akkaHttp' compile
-#          - run:
-#              name: Compile test sources
-#              command: sbt ++$SCALA_VERSION 'project akkaHttp' test:compile
-#          - run:
-#              name: Run coverage
-#              command: sbt ++$SCALA_VERSION 'project akkaHttp' coverage
-#          - run:
-#              name: Run tests
-#              command: sbt ++$SCALA_VERSION 'project akkaHttp' test
-#          - run:
-#              name: Run coveralls
-#              command: sbt ++$SCALA_VERSION 'project akkaHttp' coverageReport coveralls
-#  test_async_2.12.4:
-#      docker:
-#        - image: circleci/openjdk:8-jdk
-#        - image: influxdb:1.3.9
-#          environment:
-#            INFLUXDB_HTTP_AUTH_ENABLED: true
-#            SCALA_VERSION: 2.12.4
-#      steps:
-#        - checkout
-#        - run:
-#            name: Create admin user for InfluxDB
-#            command: "curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
-#        - run:
-#            name: Compile sources
-#            command: sbt ++$SCALA_VERSION 'project asyncHttp' compile
-#        - run:
-#            name: Compile test sources
-#            command: sbt ++$SCALA_VERSION 'project asyncHttp' test:compile
-#        - run:
-#            name: Run coverage
-#            command: sbt ++$SCALA_VERSION 'project asyncHttp' coverage
-#        - run:
-#            name: Run tests
-#            command: sbt ++$SCALA_VERSION 'project asyncHttp' test
-#        - run:
-#            name: Run coveralls
-#            command: sbt ++$SCALA_VERSION 'project asyncHttp' coverageReport coveralls
-#  test_async_2.11.11:
-#      docker:
-#        - image: circleci/openjdk:8-jdk
-#        - image: influxdb:1.3.9
-#          environment:
-#            INFLUXDB_HTTP_AUTH_ENABLED: true
-#            SCALA_VERSION: 2.11.11
-#      steps:
-#        - checkout
-#        - run:
-#            name: Create admin user for InfluxDB
-#            command: "curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
-#        - run:
-#            name: Compile sources
-#            command: sbt ++$SCALA_VERSION 'project asyncHttp' compile
-#        - run:
-#            name: Compile test sources
-#            command: sbt ++$SCALA_VERSION 'project asyncHttp' test:compile
-#        - run:
-#            name: Run coverage
-#            command: sbt ++$SCALA_VERSION 'project asyncHttp' coverage
-#        - run:
-#            name: Run tests
-#            command: sbt ++$SCALA_VERSION 'project asyncHttp' test
-#        - run:
-#            name: Run coveralls
-#            command: sbt ++$SCALA_VERSION 'project asyncHttp' coverageReport coveralls
+  test_akka_2.11.11:
+      docker:
+        - image: circleci/openjdk:8-jdk
+        - image: influxdb:1.3.9
+          environment:
+            INFLUXDB_HTTP_AUTH_ENABLED: true
+      steps:
+        - checkout
+        - run:
+            name: Create admin user for InfluxDB
+            command: "curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
+        - run:
+            name: Test
+            command: "sbt ++2.11.11 \"project akkaHttp\" compile test:compile test"
+  test_async_2.12.4:
+      docker:
+        - image: circleci/openjdk:8-jdk
+        - image: influxdb:1.3.9
+          environment:
+            INFLUXDB_HTTP_AUTH_ENABLED: true
+      steps:
+        - checkout
+        - run:
+            name: Create admin user for InfluxDB
+            command: "curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
+        - run:
+            name: Test
+            command: "sbt ++2.12.4 \"project asyncHttp\" compile test:compile test"
+  test_async_2.11.11:
+      docker:
+        - image: circleci/openjdk:8-jdk
+        - image: influxdb:1.3.9
+          environment:
+            INFLUXDB_HTTP_AUTH_ENABLED: true
+      steps:
+        - checkout
+        - run:
+            name: Create admin user for InfluxDB
+            command: "curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
+        - run:
+            name: Test
+            command: "sbt ++2.11.11 \"project asyncHttp\" compile test:compile test"
 workflows:
   version: 2
   build_and_test:
@@ -133,12 +76,12 @@ workflows:
       - test_akka_2.12.4:
           requires:
             - build
-#      - test_akka_2.11.11:
-#          requires:
-#            - build
-#      - test_async_2.12.4:
-#          requires:
-#            - build
-#      - test_async_2.11.11:
-#          requires:
-#            - build
+      - test_akka_2.11.11:
+          requires:
+            - build
+      - test_async_2.12.4:
+          requires:
+            - build
+      - test_async_2.11.11:
+          requires:
+            - build
