--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,59 +13,51 @@ jobs:
   test_akka_2.12.4:
       docker:
         - image: circleci/openjdk:8-jdk
-        - image: influxdb:1.3.9
-          environment:
-            INFLUXDB_HTTP_AUTH_ENABLED: true
       steps:
         - checkout
-        - run:
-            name: Create admin user for InfluxDB
-            command: "curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
         - run:
             name: Test
             command: "sbt ++2.12.4 \"project akkaHttp\" compile test:compile test"
   test_akka_2.11.11:
       docker:
         - image: circleci/openjdk:8-jdk
-        - image: influxdb:1.3.9
-          environment:
-            INFLUXDB_HTTP_AUTH_ENABLED: true
       steps:
         - checkout
-        - run:
-            name: Create admin user for InfluxDB
-            command: "curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
         - run:
             name: Test
             command: "sbt ++2.11.11 \"project akkaHttp\" compile test:compile test"
   test_async_2.12.4:
       docker:
         - image: circleci/openjdk:8-jdk
-        - image: influxdb:1.3.9
-          environment:
-            INFLUXDB_HTTP_AUTH_ENABLED: true
       steps:
         - checkout
-        - run:
-            name: Create admin user for InfluxDB
-            command: "curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
         - run:
             name: Test
             command: "sbt ++2.12.4 \"project asyncHttp\" compile test:compile test"
   test_async_2.11.11:
       docker:
         - image: circleci/openjdk:8-jdk
-        - image: influxdb:1.3.9
-          environment:
-            INFLUXDB_HTTP_AUTH_ENABLED: true
       steps:
         - checkout
         - run:
-            name: Create admin user for InfluxDB
-            command: "curl -G http://localhost:8086/query --data-urlencode \"q=CREATE USER admin WITH PASSWORD 'admin' WITH ALL PRIVILEGES\""
-        - run:
             name: Test
             command: "sbt ++2.11.11 \"project asyncHttp\" compile test:compile test"
+  test_udp_2.12.4:
+      docker:
+        - image: circleci/openjdk:8-jdk
+      steps:
+        - checkout
+        - run:
+            name: Test
+            command: "sbt ++2.12.4 \"project udp\" compile test:compile test"
+  test_udp_2.11.11:
+      docker:
+        - image: circleci/openjdk:8-jdk
+      steps:
+        - checkout
+        - run:
+            name: Test
+            command: "sbt ++2.11.11 \"project udp\" compile test:compile test"
 workflows:
   version: 2
   build_and_test:
@@ -81,5 +73,11 @@ workflows:
           requires:
             - build
       - test_async_2.11.11:
+          requires:
+            - build
+      - test_udp_2.12.4:
+          requires:
+            - build
+      - test_udp_2.11.11:
           requires:
             - build
