--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,74 +10,52 @@ jobs:
              command: |
                 wget -q https://dl.bintray.com/sbt/debian/sbt-1.1.0.deb
                 sudo dpkg -i sbt-1.1.0.deb
-  test_akka_2.12.4:
+  akkaHttp:
       docker:
         - image: circleci/openjdk:8-jdk
       steps:
         - checkout
         - run:
             name: Test
-            command: "sbt ++2.12.4 \"project akkaHttp\" compile test:compile test"
-  test_akka_2.11.11:
+            command: "sbt + \"project akkaHttp\" fullTest"
+  asyncHttp:
       docker:
         - image: circleci/openjdk:8-jdk
       steps:
         - checkout
         - run:
             name: Test
-            command: "sbt ++2.11.11 \"project akkaHttp\" compile test:compile test"
-  test_async_2.12.4:
+            command: "sbt + \"project asyncHttp\" fullTest"
+  udp:
       docker:
         - image: circleci/openjdk:8-jdk
       steps:
         - checkout
         - run:
             name: Test
-            command: "sbt ++2.12.4 \"project asyncHttp\" compile test:compile test"
-  test_async_2.11.11:
+            command: "sbt + \"project udp\" fullTest"
+  core:
       docker:
         - image: circleci/openjdk:8-jdk
       steps:
         - checkout
         - run:
             name: Test
-            command: "sbt ++2.11.11 \"project asyncHttp\" compile test:compile test"
-  test_udp_2.12.4:
-      docker:
-        - image: circleci/openjdk:8-jdk
-      steps:
-        - checkout
-        - run:
-            name: Test
-            command: "sbt ++2.12.4 \"project udp\" compile test:compile test"
-  test_udp_2.11.11:
-      docker:
-        - image: circleci/openjdk:8-jdk
-      steps:
-        - checkout
-        - run:
-            name: Test
-            command: "sbt ++2.11.11 \"project udp\" compile test:compile test"
+            command: "sbt + \"project core\" fullTest"
 workflows:
   version: 2
   build_and_test:
     jobs:
       - build
-      - test_akka_2.12.4:
+      - akkaHttp:
           requires:
             - build
-      - test_akka_2.11.11:
+      - asyncHttp:
           requires:
             - build
-      - test_async_2.12.4:
+      - udp:
           requires:
             - build
-      - test_async_2.11.11:
-          requires:
-            - build
-      - test_udp_2.12.4:
-          requires:
-            - build
-      - test_udp_2.11.11:
+      - core:
           requires:
             - build
