--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,76 +1,75 @@
 version: 2
 jobs:
-   chronicler:
-        docker:
-          - image: circleci/openjdk:8-jdk
-        steps:
-          - checkout
-          - run:
-              name: Insatll sbt
-              command: |
-                 wget -q https://dl.bintray.com/sbt/debian/sbt-1.1.0.deb
-                 sudo dpkg -i sbt-1.1.0.deb
-          - run:
-              name: Test
-              command: "sudo sbt +fullTest"
-#  akkaHttp:
-#      docker:
-#        - image: circleci/openjdk:8-jdk
-#      steps:
-#        - checkout
-#        - run:
-#            name: Insatll sbt
-#            command: |
-#               wget -q https://dl.bintray.com/sbt/debian/sbt-1.1.0.deb
-#               sudo dpkg -i sbt-1.1.0.deb
-#        - run:
-#            name: Test
-#            command: "sbt + \"project akkaHttp\" fullTest"
-#  asyncHttp:
-#      docker:
-#        - image: circleci/openjdk:8-jdk
-#      steps:
-#        - checkout
-#        - run:
-#            name: Insatll sbt
-#            command: |
-#               wget -q https://dl.bintray.com/sbt/debian/sbt-1.1.0.deb
-#               sudo dpkg -i sbt-1.1.0.deb
-#        - run:
-#            name: Test
-#            command: "sbt + \"project asyncHttp\" fullTest"
-#  udp:
-#      docker:
-#        - image: circleci/openjdk:8-jdk
-#      steps:
-#        - checkout
-#        - run:
-#            name: Insatll sbt
-#            command: |
-#               wget -q https://dl.bintray.com/sbt/debian/sbt-1.1.0.deb
-#               sudo dpkg -i sbt-1.1.0.deb
-#        - run:
-#            name: Test
-#            command: "sbt + \"project udp\" fullTest"
-#  core:
-#      docker:
-#        - image: circleci/openjdk:8-jdk
-#      steps:
-#        - checkout
-#        - run:
-#            name: Insatll sbt
-#            command: |
-#               wget -q https://dl.bintray.com/sbt/debian/sbt-1.1.0.deb
-#               sudo dpkg -i sbt-1.1.0.deb
-#        - run:
-#            name: Test
-#            command: "sbt + \"project core\" fullTest"
+#   chronicler:
+#        docker:
+#          - image: circleci/openjdk:8-jdk
+#        steps:
+#          - checkout
+#          - run:
+#              name: Insatll sbt
+#              command: |
+#                 wget -q https://dl.bintray.com/sbt/debian/sbt-1.1.0.deb
+#                 sudo dpkg -i sbt-1.1.0.deb
+#          - run:
+#              name: Test
+#              command: "sudo sbt +fullTest"
+  akkaHttp:
+      docker:
+        - image: circleci/openjdk:8-jdk
+      steps:
+        - checkout
+        - run:
+            name: Insatll sbt
+            command: |
+               wget -q https://dl.bintray.com/sbt/debian/sbt-1.1.0.deb
+               sudo dpkg -i sbt-1.1.0.deb
+        - run:
+            name: Test
+            command: "sbt \"project akkaHttp\" +fullTest"
+  asyncHttp:
+      docker:
+        - image: circleci/openjdk:8-jdk
+      steps:
+        - checkout
+        - run:
+            name: Insatll sbt
+            command: |
+               wget -q https://dl.bintray.com/sbt/debian/sbt-1.1.0.deb
+               sudo dpkg -i sbt-1.1.0.deb
+        - run:
+            name: Test
+            command: "sbt \"project asyncHttp\" +fullTest"
+  udp:
+      docker:
+        - image: circleci/openjdk:8-jdk
+      steps:
+        - checkout
+        - run:
+            name: Insatll sbt
+            command: |
+               wget -q https://dl.bintray.com/sbt/debian/sbt-1.1.0.deb
+               sudo dpkg -i sbt-1.1.0.deb
+        - run:
+            name: Test
+            command: "sbt \"project udp\" +fullTest"
+  core:
+      docker:
+        - image: circleci/openjdk:8-jdk
+      steps:
+        - checkout
+        - run:
+            name: Insatll sbt
+            command: |
+               wget -q https://dl.bintray.com/sbt/debian/sbt-1.1.0.deb
+               sudo dpkg -i sbt-1.1.0.deb
+        - run:
+            name: Test
+            command: "sbt \"project core\" +fullTest"
 workflows:
   version: 2
   test:
     jobs:
-       - chronicler
-#      - akkaHttp
-#      - asyncHttp
-#      - udp
-#      - core
+      - akkaHttp
+      - asyncHttp
+      - udp
+      - core
