maven badge, readme update, temporary disabling codacy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,14 +52,14 @@ jobs:
         - run:
             name: Test
             command: "sbt \"project core\" +fullTest"
-  codacy:
-      docker:
-        - image: circleci/openjdk:8-jdk
-      steps:
-        - checkout
-        - run:
-            name: Test
-            command: "sbt coverageAggregate codacyCoverage"
+#  codacy:
+#      docker:
+#        - image: circleci/openjdk:8-jdk
+#      steps:
+#        - checkout
+#        - run:
+#            name: Test
+#            command: "sbt coverageAggregate codacyCoverage"
 workflows:
   version: 2
   test:
@@ -68,9 +68,9 @@ workflows:
       - asyncHttp
       - udp
       - core
-      - codacy:
-          requires:
-            - akkaHttp
-            - asyncHttp
-            - udp
-            - core
+#      - codacy:
+#          requires:
+#            - akkaHttp
+#            - asyncHttp
+#            - udp
+#            - core
