[ALL][ISSUE-50]: update circle file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ jobs:
         - image: circleci/openjdk:8-jdk
       steps:
         - checkout
+        - setup_remote_docker
         - run:
             name: Insatll sbt
             command: |
@@ -18,6 +19,7 @@ jobs:
         - image: circleci/openjdk:8-jdk
       steps:
         - checkout
+        - setup_remote_docker
         - run:
             name: Insatll sbt
             command: |
@@ -31,6 +33,7 @@ jobs:
         - image: circleci/openjdk:8-jdk
       steps:
         - checkout
+        - setup_remote_docker
         - run:
             name: Insatll sbt
             command: |
