[TEST][ISSUE-57]: publish test modules locally

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ services:
   - docker
 
 script:
+  - sbt ++$TRAVIS_SCALA_VERSION itTesting/publishLocal
+  - sbt ++$TRAVIS_SCALA_VERSION unitTesting/publishLocal
   - sbt ++$TRAVIS_SCALA_VERSION coreTest macrosTest asyncTest udpTest urlTest akkaTest
   
 after_success:
