[TEST][ISSUE-57]: fixing dependencies access scope, added publish local alias for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ services:
   - docker
 
 script:
-  - sbt ++$TRAVIS_SCALA_VERSION unitTesting/publishLocal
-  - sbt ++$TRAVIS_SCALA_VERSION itTesting/publishLocal
+  - sbt unitPublish
+  - sbt itPublish
   - sbt ++$TRAVIS_SCALA_VERSION coreTest macrosTest asyncTest udpTest urlTest akkaTest
   
 after_success:
