--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,12 @@ scala:
 
 jdk:
   - oraclejdk8
-
 sudo: required
+
+cache:
+  directories:
+    - "$HOME/.ivy2/cache"
+    - "$HOME/.sbt/boot"
 
 services:
   - docker
