[ALL][NONE]: refactoring, returning udp to test CI pipeline

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,10 @@ services:
 script:
   - sbt ++$TRAVIS_SCALA_VERSION unitTesting/publishLocal
   - sbt ++$TRAVIS_SCALA_VERSION itTesting/publishLocal
-  - sbt ++$TRAVIS_SCALA_VERSION coreTest macrosTest urlTest asyncTest akkaTest
+  - sbt ++$TRAVIS_SCALA_VERSION coreTest macrosTest
+  - sbt urlTest
+  - sbt urlHttp/publishLocal
+  - sbt asyncTest akkaTest
   
 after_success:
  - bash <(curl -s https://codecov.io/bash)
