[CI][ISSUE-112] - fix module name

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,9 @@ before_install:
 jobs:
   include:
     - stage: test
-      script: sbt ++2.11.8 coreTest macroTest akkaTest ahcTest urlTest
+      script: sbt ++2.11.8 coreTest macrosTest akkaTest ahcTest urlTest
       name: "Running test on scala 2.11.8"
-    - script: sbt ++2.12.7 coreTest macroTest akkaTest ahcTest urlTest
+    - script: sbt ++2.12.7 coreTest macrosTest akkaTest ahcTest urlTest
       name: "Running test on scala 2.12.7"
     - stage: deploy
       script: ./scripts/publish.sh
