[UDP][NONE]: compose influxdb version, 0.4.4

--- a/modules/udp/src/it/resources/docker-compose.yml
+++ b/modules/udp/src/it/resources/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   influxdb:
-    image: "influxdb:1.7.3"
+    image: "influxdb:${INFLUXDB_VERSION}"
     environment:
       INFLUXDB_UDP_ENABLED: "true"
     ports:
