[CI][NONE]: ignoring few modules

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,14 @@ cache:
     - "$HOME/.sbt/boot"
     - "$HOME/.m2"
 
+
+ignore:
+  - "changelog/*"
+  - "scripts/*"
+  - "benchmark/*"
+  - "examples/*"
+  - "docs/*"
+
 before_install:
   - |
     if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then
